--- a/app/src/main/res/anim/shake.xml
+++ b/app/src/main/res/anim/shake.xml
@@ -11,5 +11,13 @@
         android:repeatCount="infinite"
         android:repeatMode="restart"/>
 
-
+    <scale
+        android:pivotX="50%"
+        android:pivotY="50%"
+        android:fromXScale="1.0"
+        android:fromYScale="1.0"
+        android:toXScale="1.1"
+        android:toYScale="1.1"
+        android:duration="300"
+        android:repeatCount="infinite"/>
 </set>
